--- a/_posts/2017-05-01-lstm_bb.html
+++ b/_posts/2017-05-01-lstm_bb.html
@@ -1,13 +1,21 @@
----
-title: lstm在股票上的一个思路 
-categories: rnn tensorflow  
----
+<!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
 <title>2016-10-10-blog_python_md</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
+    /*!
+*
+* Twitter Bootstrap
+*
+*/
+/*!
+ * Bootstrap v3.3.7 (http://getbootstrap.com)
+ * Copyright 2011-2016 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -185,6 +193,7 @@ td,
 th {
   padding: 0;
 }
+/*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
   *:before,
@@ -11903,4 +11912,3 @@ $$<hr>
 
 
 </html>
-
